# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  README.rst  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __main__.py
{{cookiecutter.project_name}}/tests/: {{cookiecutter.project_name}}_test.py
