[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.950"
typer = "^0.4.1"
pydantic = "^1.9.0"
pytest = "^7.1.2"
pytest-sugar = "^0.9.4"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = "true"	   

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

